--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -704,6 +704,7 @@ V této sekci se nachází výpis veřejných metod. Všechny metody i s paramet
 \item[ARO] Access Request Objects
 \item[API] Application Programming Interface
 \item[phpGACL] TODO
+\item[DTD] DTD
 \end{description}
 
 %*****************************************************************************
