--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -320,7 +320,8 @@ Funkčnost knihovny byla vyvíjena a testována pomocí databáze eXist-db.
 %*****************************************************************************
 % Úvod
 \include{1_uvod}
-
+TODO jak vizualně oddělovat metody, třídy adresy názvy souborů. apod. napr \verb|("/db/cities/cities.xml")/cities|
+V podstatě, které slova by měly být graficky (fontem) rozlišeny.
 
 %*****************************************************************************
 % Popis problému, specifikace cíle
