Checked up to Realizace

--- a/Documents/bp_sirljan_2012/reference.bib
+++ b/Documents/bp_sirljan_2012/reference.bib
@@ -50,6 +50,31 @@
   cited = "16.\,5.\,2012",
   year =         2012,
   url = "http://activeaclplus.rubyforge.org/"
+}
+
+@ONLINE-Documentation{exist:xmlrpcxupdate,
+  author = "{eXist authors}",
+  title = "eXist-db, Developer's Guide - XML-RPC - XUpdate",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = {http://exist-db.org/exist/devguide_xmlrpc.xml\#d41536e1573}
+}
+
+@ONLINE-Documentation{xupdate,
+  author = "{Andreas Laux, Lars Martin}",
+  title = "xUpdate documentation",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = "http://xmldb-org.sourceforge.net/xupdate/xupdate-wd.html"
+}
+
+@ONLINE{exist:exist,
+  author = "{Wolfgang Meier}",
+  title = "eXist-db web",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = "http://exist-db.org"
+}
 
 @Book{UML,
   author =      "Martin Fowler",
