--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -320,8 +320,6 @@ Funkčnost knihovny byla vyvíjena a testována pomocí databáze eXist-db.
 %*****************************************************************************
 % Úvod
 \include{1_uvod}
-TODO jak vizualně oddělovat metody, třídy adresy názvy souborů. apod. napr \verb|("/db/cities/cities.xml")/cities|
-V podstatě, které slova by měly být graficky (fontem) rozlišeny.
 
 %*****************************************************************************
 % Popis problému, specifikace cíle
@@ -704,8 +702,11 @@ V této sekci se nachází výpis veřejných metod. Všechny metody i s paramet
 \item[ACO] Access Control Objects
 \item[ARO] Access Request Objects
 \item[API] Application Programming Interface
-\item[phpGACL] TODO
+\item[phpGACL] Generic Access Control Lists with PHP
 \item[DTD] DTD
+\item[XML-RPC] XML Remote Procedure Call protokol
+\item[xQuery] Dotazovací jazyk nad XML dokumenty
+\item[XPath] XML Path Language
 \end{description}
 
 %*****************************************************************************
