--- a/Documents/bp_sirljan_2012/4_realizace.tex
+++ b/Documents/bp_sirljan_2012/4_realizace.tex
@@ -2,30 +2,43 @@
 Popis implementace/realizace se zaměřením na nestandardní části řešení.
 
 \section{Průběh realizace}
-Fáze 1 
-Po analýze a návrhu byla naimplementována zkušební část, kvůli ověření návrhu tříd a rozhraní. Na této verzi byla napsáno první velká část unit testů. Verze nepracoval vůbec s databází, byla pouze instanční. Tato část byla část softwarového projektu.
+Průběh realizace jsem si zpětně rozdělil do několika fází, tak jak šly chronologicky po sobě. Každá fáze představuje určitou etapu ve vývoji knihovny.
+\\
+\\
+\noindent Fáze 1
 
-Fáze 2
-Po dokončení instanční verze jsem pokračoval seznámením se s databází eXist-db, která mi byla doporučena vedoucím práce. V této fázi nastaly největší potíže. Nemohl jsem najít způsob, jakým komunikovat s databází. V Ruby neexistovalo, žádné komunikační rozraní, které by umožňovalo měnit obsah a dotazovat se na něj. Dokumentace přímo na webu  \url[eXist-db]{http://exist-db.org} popisovala jenom protokoly, kterými lze s databází komunikovat. Mezi ně patří napríklad REST, SOAP a XML-RPC, po kterém jsem nakonec šáhnul pro vývoj API. Velice mi pomohlo, když jsem úplnou náhodou našel ukázky knihovny pro XML-RPC v instalačním adresáři eXist-db.
+\noindent Po analýze a návrhu byla naimplementována zkušební část kvůli ověření návrhu tříd a rozhraní. Na tuto verzi byla napsáno první velká skupina unit testů. Verze nepracovala vůbec s databází, byla pouze instanční. Tato část práce byla součástí mého softwarového projektu.
+\\
+\\
+\noindent Fáze 2
+TODO dopsat změnu tříd z instančních na fasádové. Zjisti si jestli jsou opravdu fasadove!
+\noindent Po dokončení instanční verze jsem pokračoval seznámením se s databází eXist-db, která mi byla doporučena vedoucím práce. V této fázi nastaly největší potíže. Nemohl jsem najít způsob, jak komunikovat s databází. V Ruby neexistovalo žádné komunikační rozraní, které by umožňovalo měnit obsah a dotazovat se na něj. Dokumentace přímo na webu \cite{exist:exist} popisovala jenom protokoly, kterými lze s databází komunikovat. Mezi ně patří napríklad REST\footnote[1]{Representational State Transfer}, SOAP\footnote[2]{Simple Object Access Protocol} a XML-RPC, po kterém jsem nakonec šáhnul pro vývoj API. Velice mi pomohlo, když jsem úplnou náhodou našel ukázky knihovny pro XML-RPC v instalačním adresáři eXist-db.
 
-Komplikace tím nezkončili. Uměl jsem sice pomocí XML-RPC pracovat s kolekcemi a dokumenty, ale nedokázal jsem pomocí xUpdate upravovat dokumenty. Vkládat, upravovat a mazat uzly a atributy. Dodržel jsem dokumentaci XML-RPC, specifikace metody \url[XUpdate]{http://exist-db.org/exist/devguide_xmlrpc.xml?q=.%2F%2Fsection[ft%3Aquery%28.%2F%2Ftitle%2C%20%27xupdate%27%29]%20or%20.%2F%2Fsection[ft%3Aquery%28.%2C%20%27xupdate%27%29]&id=2.3.4#d41372e987} a dokumentaci \url[xUpdate]{http://xmldb-org.sourceforge.net/xupdate/xupdate-wd.html}, na kterou se eXist odvolává. Bohužel se mi po dlouhou dobu nejméně 14 dní nepodařilo zprovoznit upravování. 
+Komplikace tím nezkončili. Uměl jsem sice pomocí XML-RPC pracovat s kolekcemi a dokumenty, ale nedokázal jsem pomocí xUpdate upravovat dokumenty. Vkládat, upravovat a mazat uzly a atributy. Dodržel jsem dokumentaci XML-RPC, specifikace metody XUpdate\cite{exist:xmlrpcxupdate} a dokumentaci xUpdate \cite{xupdate}, na kterou se eXist odvolává. Bohužel se mi po dlouhou dobu nejméně 14 dní nepodařilo zprovoznit upravování. 
 
-V zoufalství jsem se ohlédl po alternativních možnostech. Hledal jsem XML databázi, která by měla komunikační rozhraní v Ruby. Našel jsem jedinou databázi. Byla jí Sedna. Bohužel ani s ní jsem nedospěl pokroku. Problém byl se sprovozněním knihoven, které byli napsané v jazyku C.
+V zoufalství jsem se ohlédl po alternativních možnostech. Hledal jsem XML databázi, která by měla komunikační rozhraní v Ruby. Našel jsem jedinou databázi. Byla jí Sedna. Bohužel ani s ní jsem nedospěl pokroku. Problém byl se sprovozněním knihoven, které bylys napsané v jazyku C.
 
 Z bezradnosti jsem se šel poradit s vedoucím Ing. Strnadem, který mi poradil ať posílám xQuery dotazy s příkazy xQuery Update Facility.
+\\
+\\
+\noindent Fáze 3
 
+\noindent Předělání první verze implementace RubyACL z polové/instanční na databázovou. Přepsání tříd z instančních na jakési singlotonské managery. Všechny informace jsou uloženy v databázi. RubyACl pouze vkládá nové záznamy, upravuje a maže staré. Na existujících provádí dotazy a rozhodování o přístupu.
+\\
+\\
+\noindent Fáze 4
 
-Fáze 3
-Předělání první verze implementace RubyACL z polové/instanční na databázovou. Přepsání tříd z instančních na jakési singlotonské managery. Všechny informace jsou uloženy v databázi. RubyACl pouze vkládá nové záznamy, upravuje a maže staré. Na existujících provádí dotazy a rozhodování o přístupu.
+\noindent Návrh tříd byl trochu chybný. Implementace předchozích verzí se odchylovala návrhu. Předělání tříd. Vytvoření nadřazené třídy ACL\_Object a dědění z této třídy. Intenzivní testování. Usnadnilo odhalit spousty chyb.
+\\
+\\
+\noindent Fáze 5
 
-Fáze 4
-Návrh tříd byl trochu chybný. Implementace předchozích verzí se odchylovala návrhu. Předělání tříd. Vytvoření nadřazené třídy ACL\_Object a dědění z této třídy. Intenzivní testování. Usnadnilo odhalit spousty chyb.
+\noindent Dokončení rozhodovací metody. Dotahování funkcionality. Opravování chyb a nedostatků. Testování v této fázi nejintenzivnější. Dokumentace.
+\\
+\\
+\noindent Fáze 6
 
-Fáze 5
-Dokončení rozhodovací metody. Dotahování funkcionality. Opravování chyb a nedostatků. Testování v této fázi nejintenzivnější. Dokumentace.
-
-Fáze 6
-Finalizování - rakefile, rubygem. Dokumentace
+\noindent Finalizování - rakefile, rubygem. Dokumentace
 
 
 \section{Programy použité při vývoji}
